Fix issues: defined padding- and margin- bottom will make the box larger and white space exposed underneath footer. Remove those two values

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@
 }
 body {
     font-family: Lato, sans-serif;
-    height: 3000px;
+/* add height to body for vision purpose
+    height: 3000px; */
 }
 
 /* remove default list style */
@@ -274,7 +275,7 @@ footer {
 }
 .location {
     float: left;
-    padding: 30px;
+    padding: 30px 30px 0 30px;
     width: 180px;
 }
 .location h3 {
@@ -287,7 +288,7 @@ footer {
 }
 .info dl {
     float: left;
-    margin: 30px 40px;
+    margin: 30px 40px 0 40px;
     color: #777;
 }
 .info dl dt {
@@ -303,3 +304,4 @@ footer {
     color: #777;
     margin: 20px;
 }
+/* Footer end */
